# mReader

./: .gitignore  60-openocd.rules  CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  reset.cfg
.devcontainer/: Dockerfile  devcontainer.json
examples/: CMakeLists.txt  EPD_1in54_V2_test.c  EPD_Test.h  ImageData.c  ImageData.h
lib/Fonts/: font12.c  font16.c  font20.c  font24.c  font3.c  font6.c  font8.c  fonts.c  fonts.h  input.txt  translater.js
lib/GUI/: CMakeLists.txt  GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/TinyUSB/: CMakeLists.txt  lazy_fat16.c  msc_disk.c  msc_disk.h  tinyusb.h  tusb_config.h  usb_descriptors.c  usb_events.c  usb_msc.c
lib/e-Paper/: CMakeLists.txt  EPD_1in54_V2.c  EPD_1in54_V2.h  epaper.c  epaper.h
lib/ePaper/: CMakeLists.txt  epaper.c  epaper.h  epaper_commands.h
lib/error/: CMakeLists.txt  error.c  error.h
lib/fatfs/: CMakeLists.txt  diskio.h  ff.c  ff.h  ff_flash.c  ffconf.h  ffunicode.c  flash.c  flash.h
lib/flash/: CMakeLists.txt  flash.c  flash.h
lib/fonts/: CMakeLists.txt  font12.c  font16.c  font20.c  font24.c  font3.c  font4.c  font5.c  font6.c  font8.c  fonts.c  fonts.h
lib/gui/: CMakeLists.txt  gui.c  gui.h
lib/usb/: CMakeLists.txt  msc_disk.c  tusb_config.h  usb.c  usb.h  usb_descriptors.c  usb_events.c
lib/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h  ws2812.pio
src/: config.h  helpers.c  helpers.h  main.c  main.h
src/ws2812/: ws2812.c  ws2812.h
